<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#002EEAB5"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="294dp"
            android:layout_height="214dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Kode"
            android:textSize="8pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etKodeBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/KodeBarang"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvJumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Jumlah"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="8pt"/>

        <EditText
            android:id="@+id/etJumlah"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Jumlah"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnHitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hitung" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kode"
            android:textStyle="bold"
            android:textSize="8pt"/>

        <TextView
            android:id="@+id/tvKodeBarang"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Kode"
            android:textColor="#027CC3" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namabarang"
            android:textStyle="bold"
            android:textSize="8pt"/>

        <TextView
            android:id="@+id/tvNamaBarang"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/namabarang"
            android:textColor="#027CC3"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Harga"
            android:textStyle="bold"
            android:textSize="8pt"/>
        <TextView
            android:id="@+id/tvHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Harga"
            android:textColor="#027CC3"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total"
            android:textStyle="bold"
            android:textSize="8pt"/>
        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Total"
            android:textColor="#027CC3"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Diskon"
            android:textStyle="bold"
            android:textSize="8pt"/>
        <TextView
            android:id="@+id/tvDiskon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Diskon"
            android:textColor="#027CC3"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JumlahBayar"
            android:textStyle="bold"
            android:textSize="8pt"/>

        <TextView
            android:id="@+id/tvJumlahBayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/JumlahBayar"
            android:textColor="#027CC3"/>
    </LinearLayout>
</ScrollView>